crates/serde-feather/tests/ui/enum_type.stderr
error: FeatherSerialize only supports structs in this MVP
 --> tests/ui/enum_type.rs:4:6
  |
4 | enum Shape {
  |      ^^^^^
