crates/serde-feather/tests/ui/enum_type.rs
use serde_feather::FeatherSerialize;

#[derive(FeatherSerialize)]
enum Shape {
    Circle,
}

fn main() {}
